# kong

./: .gitignore  BENCHMARKS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-03-11-batched-analysis.md
docs/specs/: 2026-03-11-batched-analysis-design.md
kong/: __init__.py  __main__.py  banner.py  config.py  db.py
kong/agent/: __init__.py  analyzer.py  deobfuscator.py  events.py  models.py  prompts.py  queue.py  signatures.py  supervisor.py  triage.py  type_recovery.py
kong/evals/: harness.py  metrics.py
kong/evals/scorecards/: minitest_baseline_2026-03-07.txt
kong/export/: source.py  structured.py
kong/ghidra/: client.py  environment.py  types.py
kong/llm/: __init__.py  client.py  limits.py  openai_client.py  probe.py  tools.py  usage.py
kong/patterns/: bogus_cf.md  cff.md  instruction_sub.md  string_encrypt.md  vmprotect.md
kong/signatures/: crypto.json  stdlib.json
kong/symbolic/: __init__.py  dead_code.py  simplifier.py  state_machine.py
kong/synthesis/: semantic.py
kong/tui/: app.py  widgets.py
kong_output/: analysis.json  decompiled.c
kong_output_hexdump/: analysis.json  decompiled.c
kong_output_liblzma/: analysis.json  decompiled.c  liblzma_analysis.json
tests/: test_agent_analyzer.py  test_agent_queue.py  test_agent_supervisor.py  test_agent_triage.py  test_cli.py  test_db.py  test_deobfuscator.py  test_evals.py  test_events.py  test_export_source.py  test_export_structured.py  test_ghidra_client.py  test_llm_client.py  test_llm_tools.py  test_normalizer.py  test_openai_client.py  test_probe.py  test_setup_wizard.py  test_symbolic.py  test_synthesis.py  test_tui.py  test_type_recovery.py
