[project]
name = "kong-re"
version = "0.2.0"
description = "The world's first AI reverse engineer, with LLM orchestration for reverse engineering binaries."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Amruth Niranjan", email = "amruthsniranjan@gmail.com" }
]
keywords = [
    "reverse engineering",
    "binary analysis",
    "LLM",
    "AI",
    "Agentic",
    "Deobfuscation",
    "Ghidra",
    "Decompilation",
    "Decompiler"
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "textual>=1.0",
    "lief>=0.15",
    "z3-solver>=4.12",
    "pyghidra>=2.2.1",
    "jpype1>=1.6.0",
    "json-repair>=0.58.5",
]

[project.urls]
Homepage = "https://github.com/amruth-sn/kong"
Repository = "https://github.com/amruth-sn/kong"
Issues = "https://github.com/amruth-sn/kong/issues"

[project.scripts]
kong = "kong.__main__:cli"

[project.optional-dependencies]
openai = [
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kong"]

[tool.pytest.ini_options]
testpaths = ["tests"]
